crates/toml/tests/snapshots/invalid/local-datetime/hour-over.stderr
TOML parse error at line 2, column 5
  |
2 | d = 2006-01-01T24:00:00
  |     ^^^^^^^^^^^^^^^^^^^
invalid time, expected hour between 00 and 23
